--- a/FoodExpress/templates/components/shopping-cart.html
+++ b/FoodExpress/templates/components/shopping-cart.html
@@ -17,7 +17,7 @@
                                  style="width: 90px !important;" class="rounded" alt="Product image">
                         </td>
                         <td>
-                            <span style="white-space: nowrap">{{ item.product.name }}</span>
+                            <span style="white-space: pre-wrap">{{ item.product.name }}</span>
                             <p class="price" style="color: #fc5959">{{ item.product.price }}₽, {{ item.product.weight }}</p>
                         </td>
                         <td>
