--- a/FoodExpress/templates/signup.html
+++ b/FoodExpress/templates/signup.html
@@ -10,7 +10,7 @@
                 <form enctype="multipart/form-data" class="mt-4 w-50" method="POST">
                     {% csrf_token %}
                     {% bootstrap_form user_form %}
-                    <button type="submit" class="btn btn-primary btn-block mb-3">Register</button>
+                    <button type="submit" class="btn btn-primary btn-block mb-3">Зарегистрироваться</button>
                 </form>
             </div>
         </div>
