--- a/FoodExpress/templates/components/signup_on_nav.html
+++ b/FoodExpress/templates/components/signup_on_nav.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="d-flex">
         <a href="{% url 'login' %}" class="btn btn-secondary me-2" style="white-space: nowrap; border-radius: 16px;
-           background-color: transparent; color: black">Log in</a>
+           background-color: transparent; color: black">Войти</a>
         <a href="{% url 'signup' %}" class="btn btn-secondary pb-2"
-           style="border-radius: 16px; background-color: transparent; color: black;">Register</a>
+           style="border-radius: 16px; background-color: transparent; color: black;">Зарегистрироваться</a>
     </div>
 </div>
