--- a/FoodExpress/templates/login.html
+++ b/FoodExpress/templates/login.html
@@ -10,9 +10,9 @@
                 <form class="mt-4 w-50" method="POST">
                     {% csrf_token %}
                     {% bootstrap_form login_form %}
-                    <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                    <button type="submit" class="btn btn-primary btn-block">Войти</button>
                 </form>
-                <a href="{% url 'signup' %}">Create a new account</a>
+                <a href="{% url 'signup' %}">Создать новый аккаунт</a>
             </div>
         </div>
     </div>
