--- a/FoodExpress/templates/settings.html
+++ b/FoodExpress/templates/settings.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 <div class="col-9 main">
-    <h2>Settings: {{ user.username }}</h2>
+    <h2>Настройки: {{ user.username }}</h2>
     <form action="" class="col-7 mt-sm-3" method="POST">
         {% csrf_token %}
         {% bootstrap_form settings_form %}
-        <button class="btn btn-primary btn-block mb-3" type="submit">Save</button>
+        <button class="btn btn-primary btn-block mb-3" type="submit">Сохранить</button>
     </form>
 </div>
 {% include 'components/categories-right.html' %}
